--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
     color: #ff5c01
 }
 
+::-webkit-scrollbar {
+    display: none;
+    /* Hide scrollbar */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
